--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,7 +30,7 @@ jobs:
           buildkitd-flags: --debug
           install: true
 
-      - name: Login to ECR SEA
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
